# service/src/main/java/me/pabloestrada/api/WebsiteGeneratorService.java
@@ -1,5 +1,0 @@
-package me.pabloestrada.api;
-
-public abstract class WebsiteGeneratorService {
-    public abstract void generateWebsite();
-}
