# service/src/main/java/me/pabloestrada/api/impl/websitegenerator/WebsiteGeneratorServiceImpl.java
@@ -1,10 +1,0 @@
-package me.pabloestrada.api.impl.websitegenerator;
-
-import me.pabloestrada.api.WebsiteGeneratorService;
-
-public class WebsiteGeneratorServiceImpl extends WebsiteGeneratorService {
-    @Override
-    public void generateWebsite() {
-
-    }
-}
